Add stability score measurement

--- a/src/metrics_scripts/calc_metrics.ipynb
+++ b/src/metrics_scripts/calc_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,17 +160,22 @@
     "std_results = results.drop(columns=[\"fold\"]).groupby(['method', 'level']).std().reset_index()\n",
     "# Merge the average and standard deviation results\n",
     "final_results = pd.merge(average_results, std_results, on=['method', 'level'], suffixes=('_mean', '_std'))\n",
+    "\n",
     "# Rename the columns for clarity\n",
     "final_results.columns = ['method', 'level', 'f1_weighted_mean', 'accuracy_mean', 'macro_f1_mean', 'mcc_mean', 'kappa_mean', 'r2_mean', 'pearson_corr_mean',\n",
     "                          'f1_weighted_std', 'accuracy_std', 'macro_f1_std', 'mcc_std', 'kappa_std', 'r2_std', 'pearson_corr_std']\n",
     "\n",
-    "# Save the final results to a CSV file\n",
-    "final_results.to_csv(os.path.join(base_path, \"final_results.csv\"), index=False)\n"
+    "# calculate a stability metric for the methods where s = (1 - std/stability_thresh)\n",
+    "stability_thresh = 5\n",
+    "final_results['stability'] = 1 - (final_results['mcc_std'] / stability_thresh)\n",
+    "\n",
+    "# Save the final results to a CSV file with ';' as the separator\n",
+    "final_results.to_csv(os.path.join(base_path, \"final_results.csv\"), index=False, sep=';')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -261,10 +266,15 @@
          "name": "pearson_corr_std",
          "rawType": "float64",
          "type": "float"
+        },
+        {
+         "name": "stability",
+         "rawType": "float64",
+         "type": "float"
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "5d920aec-5f0a-4315-8125-74866ff08e62",
+       "ref": "db545c29-ee50-4b1c-8279-e0eb55d9d6bc",
        "rows": [
         [
          "0",
@@ -283,7 +293,8 @@
          "0.04484918736574799",
          "0.053045282527941544",
          "0.10644639715770192",
-         "0.058392569628614464"
+         "0.058392569628614464",
+         "0.9910301625268504"
         ],
         [
          "1",
@@ -302,7 +313,8 @@
          "0.026184873568648334",
          "0.028452815752000763",
          "0.028782135853718478",
-         "0.014758770083715202"
+         "0.014758770083715202",
+         "0.9947630252862704"
         ],
         [
          "2",
@@ -321,7 +333,8 @@
          "0.03145695205657209",
          "0.033421614841881525",
          "0.009927824138886923",
-         "0.005001617880549745"
+         "0.005001617880549745",
+         "0.9937086095886856"
         ],
         [
          "3",
@@ -340,7 +353,8 @@
          "0.0163765447667641",
          "0.01643609286787973",
          "0.0013281091212132457",
-         "0.0006647945314737601"
+         "0.0006647945314737601",
+         "0.9967246910466472"
         ],
         [
          "4",
@@ -359,7 +373,8 @@
          "0.013008129653937635",
          "0.013051912882782069",
          "0.0007642324651667316",
-         "0.00038234130696707087"
+         "0.00038234130696707087",
+         "0.9973983740692125"
         ],
         [
          "5",
@@ -378,10 +393,71 @@
          "0.012490586676103293",
          "0.012541114720329722",
          "0.00032744730059371655",
-         "0.00016380868157371418"
+         "0.00016380868157371418",
+         "0.9975018826647793"
         ],
         [
          "6",
+         "scyan",
+         "level1",
+         "0.8162133156180127",
+         "0.8325527162630136",
+         "0.6052007151907689",
+         "0.7290615519654329",
+         "0.7251713029354176",
+         "0.9718243520531723",
+         "0.9858115195376712",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "7",
+         "scyan",
+         "level2",
+         "0.7661600492288206",
+         "0.7741256614827277",
+         "0.595902404619422",
+         "0.6848254389842727",
+         "0.6784162906592324",
+         "0.8796868189855948",
+         "0.9379162110687685",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "8",
+         "scyan",
+         "level3",
+         "0.7472622003564096",
+         "0.7498605389867364",
+         "0.5790726801964227",
+         "0.6764623771302181",
+         "0.6743504872013795",
+         "0.9772936700561822",
+         "0.9885816456197142",
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null,
+         null
+        ],
+        [
+         "9",
          "xgboost_default_StratifiedGroupKFold",
          "level1",
          "0.9504050558238866",
@@ -397,10 +473,11 @@
          "0.012787732296881852",
          "0.012773702876337504",
          "0.0006385812717157069",
-         "0.0003194118982105367"
+         "0.0003194118982105367",
+         "0.9974424535406237"
         ],
         [
-         "7",
+         "10",
          "xgboost_default_StratifiedGroupKFold",
          "level2",
          "0.9439514956439667",
@@ -416,10 +493,11 @@
          "0.009158157990204599",
          "0.00943663457761467",
          "0.002632909627776103",
-         "0.001318577445572246"
+         "0.001318577445572246",
+         "0.9981683684019591"
         ],
         [
-         "8",
+         "11",
          "xgboost_default_StratifiedGroupKFold",
          "level3",
          "0.9308075250090218",
@@ -435,12 +513,13 @@
          "0.012603846051688912",
          "0.01308937527252317",
          "0.0013281652840690058",
-         "0.0006646978274136193"
+         "0.0006646978274136193",
+         "0.9974792307896622"
         ]
        ],
        "shape": {
-        "columns": 16,
-        "rows": 9
+        "columns": 17,
+        "rows": 12
        }
       },
       "text/html": [
@@ -478,6 +557,7 @@
        "      <th>kappa_std</th>\n",
        "      <th>r2_std</th>\n",
        "      <th>pearson_corr_std</th>\n",
+       "      <th>stability</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -499,6 +579,7 @@
        "      <td>0.053045</td>\n",
        "      <td>0.106446</td>\n",
        "      <td>0.058393</td>\n",
+       "      <td>0.991030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -518,6 +599,7 @@
        "      <td>0.028453</td>\n",
        "      <td>0.028782</td>\n",
        "      <td>0.014759</td>\n",
+       "      <td>0.994763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -537,6 +619,7 @@
        "      <td>0.033422</td>\n",
        "      <td>0.009928</td>\n",
        "      <td>0.005002</td>\n",
+       "      <td>0.993709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -556,6 +639,7 @@
        "      <td>0.016436</td>\n",
        "      <td>0.001328</td>\n",
        "      <td>0.000665</td>\n",
+       "      <td>0.996725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -575,6 +659,7 @@
        "      <td>0.013052</td>\n",
        "      <td>0.000764</td>\n",
        "      <td>0.000382</td>\n",
+       "      <td>0.997398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -594,9 +679,70 @@
        "      <td>0.012541</td>\n",
        "      <td>0.000327</td>\n",
        "      <td>0.000164</td>\n",
+       "      <td>0.997502</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>scyan</td>\n",
+       "      <td>level1</td>\n",
+       "      <td>0.816213</td>\n",
+       "      <td>0.832553</td>\n",
+       "      <td>0.605201</td>\n",
+       "      <td>0.729062</td>\n",
+       "      <td>0.725171</td>\n",
+       "      <td>0.971824</td>\n",
+       "      <td>0.985812</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>scyan</td>\n",
+       "      <td>level2</td>\n",
+       "      <td>0.766160</td>\n",
+       "      <td>0.774126</td>\n",
+       "      <td>0.595902</td>\n",
+       "      <td>0.684825</td>\n",
+       "      <td>0.678416</td>\n",
+       "      <td>0.879687</td>\n",
+       "      <td>0.937916</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>scyan</td>\n",
+       "      <td>level3</td>\n",
+       "      <td>0.747262</td>\n",
+       "      <td>0.749861</td>\n",
+       "      <td>0.579073</td>\n",
+       "      <td>0.676462</td>\n",
+       "      <td>0.674350</td>\n",
+       "      <td>0.977294</td>\n",
+       "      <td>0.988582</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
        "      <td>xgboost_default_StratifiedGroupKFold</td>\n",
        "      <td>level1</td>\n",
        "      <td>0.950405</td>\n",
@@ -613,9 +759,10 @@
        "      <td>0.012774</td>\n",
        "      <td>0.000639</td>\n",
        "      <td>0.000319</td>\n",
+       "      <td>0.997442</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>10</th>\n",
        "      <td>xgboost_default_StratifiedGroupKFold</td>\n",
        "      <td>level2</td>\n",
        "      <td>0.943951</td>\n",
@@ -632,9 +779,10 @@
        "      <td>0.009437</td>\n",
        "      <td>0.002633</td>\n",
        "      <td>0.001319</td>\n",
+       "      <td>0.998168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>11</th>\n",
        "      <td>xgboost_default_StratifiedGroupKFold</td>\n",
        "      <td>level3</td>\n",
        "      <td>0.930808</td>\n",
@@ -651,58 +799,71 @@
        "      <td>0.013089</td>\n",
        "      <td>0.001328</td>\n",
        "      <td>0.000665</td>\n",
+       "      <td>0.997479</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             method   level  f1_weighted_mean  \\\n",
-       "0  logistic_regression_default_StratifiedGroupKFold  level1          0.814854   \n",
-       "1  logistic_regression_default_StratifiedGroupKFold  level2          0.836056   \n",
-       "2  logistic_regression_default_StratifiedGroupKFold  level3          0.846821   \n",
-       "3        random_forest_default_StratifiedGroupKFold  level1          0.940013   \n",
-       "4        random_forest_default_StratifiedGroupKFold  level2          0.934352   \n",
-       "5        random_forest_default_StratifiedGroupKFold  level3          0.924070   \n",
-       "6              xgboost_default_StratifiedGroupKFold  level1          0.950405   \n",
-       "7              xgboost_default_StratifiedGroupKFold  level2          0.943951   \n",
-       "8              xgboost_default_StratifiedGroupKFold  level3          0.930808   \n",
+       "                                              method   level  \\\n",
+       "0   logistic_regression_default_StratifiedGroupKFold  level1   \n",
+       "1   logistic_regression_default_StratifiedGroupKFold  level2   \n",
+       "2   logistic_regression_default_StratifiedGroupKFold  level3   \n",
+       "3         random_forest_default_StratifiedGroupKFold  level1   \n",
+       "4         random_forest_default_StratifiedGroupKFold  level2   \n",
+       "5         random_forest_default_StratifiedGroupKFold  level3   \n",
+       "6                                              scyan  level1   \n",
+       "7                                              scyan  level2   \n",
+       "8                                              scyan  level3   \n",
+       "9               xgboost_default_StratifiedGroupKFold  level1   \n",
+       "10              xgboost_default_StratifiedGroupKFold  level2   \n",
+       "11              xgboost_default_StratifiedGroupKFold  level3   \n",
        "\n",
-       "   accuracy_mean  macro_f1_mean  mcc_mean  kappa_mean   r2_mean  \\\n",
-       "0       0.772080       0.600885  0.686274    0.667778  0.851340   \n",
-       "1       0.806417       0.648743  0.736866    0.730765  0.960658   \n",
-       "2       0.831264       0.728583  0.786625    0.783300  0.990080   \n",
-       "3       0.944307       0.741392  0.909823    0.909417  0.998472   \n",
-       "4       0.938353       0.774703  0.910028    0.909822  0.998603   \n",
-       "5       0.927591       0.836556  0.902955    0.902796  0.998934   \n",
-       "6       0.947757       0.825614  0.917102    0.916740  0.999396   \n",
-       "7       0.941887       0.845405  0.916749    0.916203  0.997533   \n",
-       "8       0.928657       0.866772  0.907173    0.906355  0.998260   \n",
+       "    f1_weighted_mean  accuracy_mean  macro_f1_mean  mcc_mean  kappa_mean  \\\n",
+       "0           0.814854       0.772080       0.600885  0.686274    0.667778   \n",
+       "1           0.836056       0.806417       0.648743  0.736866    0.730765   \n",
+       "2           0.846821       0.831264       0.728583  0.786625    0.783300   \n",
+       "3           0.940013       0.944307       0.741392  0.909823    0.909417   \n",
+       "4           0.934352       0.938353       0.774703  0.910028    0.909822   \n",
+       "5           0.924070       0.927591       0.836556  0.902955    0.902796   \n",
+       "6           0.816213       0.832553       0.605201  0.729062    0.725171   \n",
+       "7           0.766160       0.774126       0.595902  0.684825    0.678416   \n",
+       "8           0.747262       0.749861       0.579073  0.676462    0.674350   \n",
+       "9           0.950405       0.947757       0.825614  0.917102    0.916740   \n",
+       "10          0.943951       0.941887       0.845405  0.916749    0.916203   \n",
+       "11          0.930808       0.928657       0.866772  0.907173    0.906355   \n",
        "\n",
-       "   pearson_corr_mean  f1_weighted_std  accuracy_std  macro_f1_std   mcc_std  \\\n",
-       "0           0.921201         0.031935      0.042159      0.017600  0.044849   \n",
-       "1           0.980043         0.021745      0.029581      0.011731  0.026185   \n",
-       "2           0.995018         0.025411      0.028935      0.016417  0.031457   \n",
-       "3           0.999235         0.010153      0.009400      0.016570  0.016377   \n",
-       "4           0.999301         0.012287      0.011538      0.010229  0.013008   \n",
-       "5           0.999467         0.007863      0.007934      0.010534  0.012491   \n",
-       "6           0.999698         0.006870      0.007212      0.020623  0.012788   \n",
-       "7           0.998765         0.008229      0.008490      0.008151  0.009158   \n",
-       "8           0.999129         0.009481      0.010099      0.016428  0.012604   \n",
+       "     r2_mean  pearson_corr_mean  f1_weighted_std  accuracy_std  macro_f1_std  \\\n",
+       "0   0.851340           0.921201         0.031935      0.042159      0.017600   \n",
+       "1   0.960658           0.980043         0.021745      0.029581      0.011731   \n",
+       "2   0.990080           0.995018         0.025411      0.028935      0.016417   \n",
+       "3   0.998472           0.999235         0.010153      0.009400      0.016570   \n",
+       "4   0.998603           0.999301         0.012287      0.011538      0.010229   \n",
+       "5   0.998934           0.999467         0.007863      0.007934      0.010534   \n",
+       "6   0.971824           0.985812              NaN           NaN           NaN   \n",
+       "7   0.879687           0.937916              NaN           NaN           NaN   \n",
+       "8   0.977294           0.988582              NaN           NaN           NaN   \n",
+       "9   0.999396           0.999698         0.006870      0.007212      0.020623   \n",
+       "10  0.997533           0.998765         0.008229      0.008490      0.008151   \n",
+       "11  0.998260           0.999129         0.009481      0.010099      0.016428   \n",
        "\n",
-       "   kappa_std    r2_std  pearson_corr_std  \n",
-       "0   0.053045  0.106446          0.058393  \n",
-       "1   0.028453  0.028782          0.014759  \n",
-       "2   0.033422  0.009928          0.005002  \n",
-       "3   0.016436  0.001328          0.000665  \n",
-       "4   0.013052  0.000764          0.000382  \n",
-       "5   0.012541  0.000327          0.000164  \n",
-       "6   0.012774  0.000639          0.000319  \n",
-       "7   0.009437  0.002633          0.001319  \n",
-       "8   0.013089  0.001328          0.000665  "
+       "     mcc_std  kappa_std    r2_std  pearson_corr_std  stability  \n",
+       "0   0.044849   0.053045  0.106446          0.058393   0.991030  \n",
+       "1   0.026185   0.028453  0.028782          0.014759   0.994763  \n",
+       "2   0.031457   0.033422  0.009928          0.005002   0.993709  \n",
+       "3   0.016377   0.016436  0.001328          0.000665   0.996725  \n",
+       "4   0.013008   0.013052  0.000764          0.000382   0.997398  \n",
+       "5   0.012491   0.012541  0.000327          0.000164   0.997502  \n",
+       "6        NaN        NaN       NaN               NaN        NaN  \n",
+       "7        NaN        NaN       NaN               NaN        NaN  \n",
+       "8        NaN        NaN       NaN               NaN        NaN  \n",
+       "9   0.012788   0.012774  0.000639          0.000319   0.997442  \n",
+       "10  0.009158   0.009437  0.002633          0.001319   0.998168  \n",
+       "11  0.012604   0.013089  0.001328          0.000665   0.997479  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
