--- a/src/training_amount/xgb_amount.ipynb
+++ b/src/training_amount/xgb_amount.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f28bcef4",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,8 @@
     "from sklearn.metrics import classification_report, f1_score, accuracy_score\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "import random\n",
-    "import json"
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -1378,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f8c99eea",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1445,7 @@
     "\n",
     "ax1.legend(fontsize=14, loc='lower right')\n",
     "plt.tight_layout()\n",
-    "plt.savefig('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/plots/amount_of_images_needed_for_training.svg', dpi=300)\n"
+    "plt.savefig(os.path.join('..', 'plotting', 'figure_plots', 'amount_of_images_needed_for_training.svg'), dpi=300)"
    ]
   },
   {
@@ -2003,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "198e088a",
    "metadata": {},
    "outputs": [
@@ -2030,7 +2031,7 @@
     "plt.xticks(fontsize=14)\n",
     "ax.set_title('Amount of cells needed for training', fontsize=18)\n",
     "ax.legend(fontsize=14, loc='lower right')\n",
-    "plt.savefig('/Users/lukashat/Documents/PhD_Schapiro/Projects/phenotype_benchmark/plots/amount_of_cells_needed_for_training.svg', dpi=300)\n",
+    "plt.savefig(os.path.join('..', 'plotting', 'figure_plots', 'amount_of_cells_needed_for_training.svg'), dpi=300)\n",
     "plt.show()"
    ]
   },
