added paths to starling

--- a/src/preprocessing/datasets/process_cHL2.ipynb
+++ b/src/preprocessing/datasets/process_cHL2.ipynb
@@ -435,372 +435,8 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CD45</th>\n",
-       "      <th>CD20</th>\n",
-       "      <th>dsDNA</th>\n",
-       "      <th>pSLP-76</th>\n",
-       "      <th>SLP-76</th>\n",
-       "      <th>anti-H2AX (pS139)</th>\n",
-       "      <th>CD163</th>\n",
-       "      <th>Histone H3</th>\n",
-       "      <th>CD45RO</th>\n",
-       "      <th>CD28</th>\n",
-       "      <th>...</th>\n",
-       "      <th>CD25</th>\n",
-       "      <th>Na-K ATPase</th>\n",
-       "      <th>cell_id</th>\n",
-       "      <th>cellSize</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>sample_id</th>\n",
-       "      <th>level_1_cell_type</th>\n",
-       "      <th>level_2_cell_type</th>\n",
-       "      <th>cell_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.077281</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>326</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.csv</td>\n",
-       "      <td>unedfined</td>\n",
-       "      <td>undefined</td>\n",
-       "      <td>undefined</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.167179</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2</td>\n",
-       "      <td>23</td>\n",
-       "      <td>420</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.csv</td>\n",
-       "      <td>Immune</td>\n",
-       "      <td>Lymphoid_immune</td>\n",
-       "      <td>CD4+_T_cell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.002631</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.176009</td>\n",
-       "      <td>0.000106</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000769</td>\n",
-       "      <td>0.003703</td>\n",
-       "      <td>4</td>\n",
-       "      <td>21</td>\n",
-       "      <td>1386</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.csv</td>\n",
-       "      <td>Immune</td>\n",
-       "      <td>Lymphoid_immune</td>\n",
-       "      <td>CD4+_T_cell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.077354</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>5</td>\n",
-       "      <td>14</td>\n",
-       "      <td>1436</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.csv</td>\n",
-       "      <td>Stromal</td>\n",
-       "      <td>Vascular</td>\n",
-       "      <td>Endothelial</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.182809</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "      <td>24</td>\n",
-       "      <td>1452</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.csv</td>\n",
-       "      <td>unedfined</td>\n",
-       "      <td>undefined</td>\n",
-       "      <td>undefined</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230884</th>\n",
-       "      <td>0.001647</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000260</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.136305</td>\n",
-       "      <td>0.009310</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.004148</td>\n",
-       "      <td>0.005979</td>\n",
-       "      <td>40526</td>\n",
-       "      <td>25</td>\n",
-       "      <td>2301</td>\n",
-       "      <td>2559</td>\n",
-       "      <td>6.csv</td>\n",
-       "      <td>Immune</td>\n",
-       "      <td>Lymphoid_immune</td>\n",
-       "      <td>CD4+_T_cell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230885</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000694</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.009834</td>\n",
-       "      <td>0.158602</td>\n",
-       "      <td>0.002389</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.004477</td>\n",
-       "      <td>40527</td>\n",
-       "      <td>40</td>\n",
-       "      <td>2351</td>\n",
-       "      <td>2559</td>\n",
-       "      <td>6.csv</td>\n",
-       "      <td>Immune</td>\n",
-       "      <td>Lymphoid_immune</td>\n",
-       "      <td>CD4+_T_cell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230886</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000453</td>\n",
-       "      <td>0.002904</td>\n",
-       "      <td>0.000779</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.003010</td>\n",
-       "      <td>0.209390</td>\n",
-       "      <td>0.007215</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.004282</td>\n",
-       "      <td>40528</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2371</td>\n",
-       "      <td>2559</td>\n",
-       "      <td>6.csv</td>\n",
-       "      <td>Immune</td>\n",
-       "      <td>Lymphoid_immune</td>\n",
-       "      <td>CD4+_T_cell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230887</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000524</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.040630</td>\n",
-       "      <td>0.227213</td>\n",
-       "      <td>0.003365</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>40529</td>\n",
-       "      <td>16</td>\n",
-       "      <td>2469</td>\n",
-       "      <td>2559</td>\n",
-       "      <td>6.csv</td>\n",
-       "      <td>Immune</td>\n",
-       "      <td>Lymphoid_immune</td>\n",
-       "      <td>CD4+_T_cell</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>230888</th>\n",
-       "      <td>0.003643</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.091232</td>\n",
-       "      <td>0.001600</td>\n",
-       "      <td>0.000599</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.001431</td>\n",
-       "      <td>0.004262</td>\n",
-       "      <td>40530</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1812</td>\n",
-       "      <td>2559</td>\n",
-       "      <td>6.csv</td>\n",
-       "      <td>unedfined</td>\n",
-       "      <td>undefined</td>\n",
-       "      <td>undefined</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>230889 rows × 54 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "            CD45  CD20     dsDNA   pSLP-76    SLP-76  anti-H2AX (pS139)  \\\n",
-       "0       0.000000   0.0  0.000000  0.000000  0.000000                0.0   \n",
-       "1       0.000000   0.0  0.000000  0.000000  0.000000                0.0   \n",
-       "2       0.002631   0.0  0.000000  0.000000  0.000000                0.0   \n",
-       "3       0.000000   0.0  0.000000  0.000000  0.000000                0.0   \n",
-       "4       0.000000   0.0  0.000000  0.000000  0.000000                0.0   \n",
-       "...          ...   ...       ...       ...       ...                ...   \n",
-       "230884  0.001647   0.0  0.000260  0.000000  0.000000                0.0   \n",
-       "230885  0.000000   0.0  0.000694  0.000000  0.000000                0.0   \n",
-       "230886  0.000000   0.0  0.000453  0.002904  0.000779                0.0   \n",
-       "230887  0.000000   0.0  0.000000  0.000000  0.000524                0.0   \n",
-       "230888  0.003643   0.0  0.000000  0.000000  0.000000                0.0   \n",
-       "\n",
-       "           CD163  Histone H3    CD45RO      CD28  ...      CD25  Na-K ATPase  \\\n",
-       "0       0.000000    0.077281  0.000000  0.000000  ...  0.000000     0.000000   \n",
-       "1       0.000000    0.167179  0.000000  0.000000  ...  0.000000     0.000000   \n",
-       "2       0.000000    0.176009  0.000106  0.000000  ...  0.000769     0.003703   \n",
-       "3       0.000000    0.077354  0.000000  0.000000  ...  0.000000     0.000000   \n",
-       "4       0.000000    0.182809  0.000000  0.000000  ...  0.000000     0.000000   \n",
-       "...          ...         ...       ...       ...  ...       ...          ...   \n",
-       "230884  0.000000    0.136305  0.009310  0.000000  ...  0.004148     0.005979   \n",
-       "230885  0.009834    0.158602  0.002389  0.000000  ...  0.000000     0.004477   \n",
-       "230886  0.003010    0.209390  0.007215  0.000000  ...  0.000000     0.004282   \n",
-       "230887  0.040630    0.227213  0.003365  0.000000  ...  0.000000     0.000000   \n",
-       "230888  0.000000    0.091232  0.001600  0.000599  ...  0.001431     0.004262   \n",
-       "\n",
-       "        cell_id  cellSize     x     y  sample_id  level_1_cell_type  \\\n",
-       "0             1        13   326     2      1.csv          unedfined   \n",
-       "1             2        23   420     2      1.csv             Immune   \n",
-       "2             4        21  1386     2      1.csv             Immune   \n",
-       "3             5        14  1436     2      1.csv            Stromal   \n",
-       "4             6        24  1452     2      1.csv          unedfined   \n",
-       "...         ...       ...   ...   ...        ...                ...   \n",
-       "230884    40526        25  2301  2559      6.csv             Immune   \n",
-       "230885    40527        40  2351  2559      6.csv             Immune   \n",
-       "230886    40528        22  2371  2559      6.csv             Immune   \n",
-       "230887    40529        16  2469  2559      6.csv             Immune   \n",
-       "230888    40530        16  1812  2559      6.csv          unedfined   \n",
-       "\n",
-       "        level_2_cell_type    cell_type  \n",
-       "0               undefined    undefined  \n",
-       "1         Lymphoid_immune  CD4+_T_cell  \n",
-       "2         Lymphoid_immune  CD4+_T_cell  \n",
-       "3                Vascular  Endothelial  \n",
-       "4               undefined    undefined  \n",
-       "...                   ...          ...  \n",
-       "230884    Lymphoid_immune  CD4+_T_cell  \n",
-       "230885    Lymphoid_immune  CD4+_T_cell  \n",
-       "230886    Lymphoid_immune  CD4+_T_cell  \n",
-       "230887    Lymphoid_immune  CD4+_T_cell  \n",
-       "230888          undefined    undefined  \n",
-       "\n",
-       "[230889 rows x 54 columns]"
+       "12"
       ]
      },
      "execution_count": 3,
@@ -809,7 +445,7 @@
     }
    ],
    "source": [
-    "df"
+    "df['cell_type'].nunique()"
    ]
   },
   {
